# ml_resiliance_lab

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/app/: actions.ts  globals.css  layout.tsx  page.tsx  time_distribution.json
dashboard/src/app/api/stream/: route.ts
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/model/: page.tsx
dashboard/src/app/resilience/: page.tsx
dashboard/src/components/: AlertsTable.tsx  ControlPanel.tsx  DashboardClient.tsx  DriftChart.tsx  GuidedTour.tsx  Header.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LogViewer.tsx  MetricsCard.tsx  ResilienceClient.tsx  Sidebar.tsx  TimeDistributionChart.tsx  TransactionCard.tsx
dashboard/src/lib/: db.ts
dashboard/src/model/: mlflow.db
dataset/: create_datasets.py  get_transactions_time_distributions.ipynb
src/ingestion/: data_ingestion.py
src/model/: model_wrapper.py  train.py  training.md
src/pipeline/: fault_injector.py  producer.py  run.py
src/pipeline/layers/: bronze.py  decision_engine.py  gold.py  inference.py  producer.py  silver.py
src/utils/: contract.py  validation.py
