[project]
name = "ml-resiliance-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pymongo>=4.17.0",
    "requests>=2.33.1",
]

[project.optional-dependencies]
training = [
    "kaggle>=2.1.0",
    "mlflow>=3.11.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]